--- a/FantaCalcioTicino/src/app/component/footer/footer.component.html
+++ b/FantaCalcioTicino/src/app/component/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="page-footer fixed-bottom font-small blue">
+<footer class="page-footer font-small blue">
     <div class="footer-copyright text-center py-3">© 2021 Copyright by
       <a class="agency" href="#">Think</a>
     </div>
