--- a/FantaCalcioTicino/src/app/component/header/header.component.html
+++ b/FantaCalcioTicino/src/app/component/header/header.component.html
@@ -13,7 +13,7 @@
         <li class="nav-item dropdown">
             <a class="nav-link" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Utente</a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="#">Account</a>
+            <a class="dropdown-item" routerLink="/account">Account</a>
             <a class="dropdown-item" href="#">Logout</a>
             </div>
         </li>
