--- a/FantaCalcioTicino/src/app/component/footer/footer.component.scss
+++ b/FantaCalcioTicino/src/app/component/footer/footer.component.scss
@@ -1,7 +1,6 @@
 footer {
-    background-color: rgb(186, 31, 35);
+    background-color: black;
     color: #fff;
-    margin-top: 2%;
 }
 
 .agency {
