--- a/FantaCalcioTicino/src/app/component/header/header.component.html
+++ b/FantaCalcioTicino/src/app/component/header/header.component.html
@@ -1,22 +1,26 @@
-<nav class="navbar sticky-top navbar-expand-lg">
-    <a class="navbar-brand" href="#"><img class="laborsport-logo" src="/assets/img/logo/laborsport-compact.png"/></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <a class="nav-item nav-link active" routerLink="/home">Home<span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link" routerLink="/formazione">Formazione</a>
-        <a class="nav-item nav-link" routerLink="/live">Live</a>
-        <a class="nav-item nav-link" routerLink="/classifica">Classifica</a>
-        <a class="nav-item nav-link" routerLink="/regolamento">Regolamento</a>
-        <li class="nav-item dropdown">
-            <a class="nav-link" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Utente</a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" routerLink="/account">Account</a>
-            <a class="dropdown-item" href="#">Logout</a>
-            </div>
-        </li>
-      </div>
+<nav class="navbar sticky-top navbar-expand-md">
+  <a class="navbar-brand" href="#"></a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="navbar-nav">
+      <a class="nav-item nav-link active" routerLink="/home">Home<span class="sr-only">(current)</span></a>
+      <a class="nav-item nav-link" routerLink="/formazione">Formazione</a>
+      <a class="nav-item nav-link" routerLink="/live">Live</a>
+      <a class="nav-item nav-link" href="https://laborsport.com" target="_blank">News</a>
+      <a class="nav-item nav-link" routerLink="/classifica">Classifica</a>
+      <a class="nav-item nav-link" routerLink="/regolamento">Regolamento</a>
+      <a class="nav-item nav-link" routerLink="/gestione">Gestione</a>
+      <li class="nav-item dropdown">
+        <a class="nav-link" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true"
+          aria-expanded="false">Utente</a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <a class="dropdown-item" routerLink="/account">Account</a>
+          <a class="dropdown-item" href="#">Logout</a>
+        </div>
+      </li>
     </div>
-  </nav>
+  </div>
+</nav>
