--- a/FantaCalcioTicino/src/app/page/home/home.component.html
+++ b/FantaCalcioTicino/src/app/page/home/home.component.html
@@ -1,28 +1,93 @@
-<!--<div id="container" *ngFor="let match of matches$">
-        <h1>{{match.home.name}}</h1>
-</div>-->
+<div class="main-container">
 
-<h2 class="title">LE PARTITE DELLA PROSSIMA GIORNATA</h2>
+    <!-- WELCOME -->
+    <div class="container-title">
+        <h5 class="subtitle"><i>Fantacalcio Ticino</i></h5>
+        <h3 class="main-title">Crea subito la tua squadra e diventa il migliore fanta allenatore del calcio regionale
+            ticinese</h3>
+        <h5 class="subtitle">Inoltre puoi seguire risultati, marcatori, news e tanto altro delle partite della prossima
+            giornata elencate qui sotto</h5>
+    </div>
 
-<div *ngFor="let match of matches$">
-    <div class="container">
-        <div class="row match-info">
-            <div class="col">
-                <h3>{{match.date}} <span class="divider">|</span>{{match.place}}</h3>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col">
-                <img class="team-logo" src="/assets/img/team/{{match.home.logo}}">
-                <h4>{{match.home.name}}</h4>
-            </div>
-            <div class="col vs">
-                <h4>VS</h4>
-            </div>
-            <div class="col">
-                <img class="team-logo" src="/assets/img/team/{{match.guest.logo}}">
-                <h4>{{match.guest.name}}</h4>
+    <!-- MATCHES -->
+    <div class="matches">
+        <div *ngFor="let match of matches$">
+            <div class="card bg-light mb-3" style="margin-left: auto; margin-right: auto; width: 60%;">
+                <div class="card-header" style="text-align: center;">{{match.date}}<span
+                        class="divider">|</span>{{match.place}}<span class="divider">|</span>Risultato:
+                    {{match.goalHome}} - {{match.goalGuest}}</div>
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col vs">
+                            <div class="card mb-3" style="width: 300px; border: none;">
+                                <div class="row no-gutters" style="background-color: rgb(247, 248, 249);">
+                                    <div class="col-md-4">
+                                        <img src="/assets/img/team/{{match.home.logo}}" class="card-img" alt="...">
+                                    </div>
+                                    <div class="col-md-8">
+                                        <div class="card-body">
+                                            <h5 class="card-title">{{match.home.name}}</h5>
+                                            <p class="card-text"><small class="text-muted">{{match.home.category}}a
+                                                    Lega</small></p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col vs">
+                            <h4>-</h4>
+                        </div>
+                        <div class="col vs">
+                            <div class="card mb-3" style="width: 300px; border: none;">
+                                <div class="row no-gutters" style="background-color: rgb(247, 248, 249);">
+                                    <div class="col-md-4">
+                                        <img src="/assets/img/team/{{match.guest.logo}}" class="card-img" alt="...">
+                                    </div>
+                                    <div class="col-md-8">
+                                        <div class="card-body">
+                                            <h5 class="card-title">{{match.guest.name}}</h5>
+                                            <p class="card-text"><small class="text-muted">{{match.guest.category}}a
+                                                    Lega</small></p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
+
+    <!-- SPONSOR -->
+    <div class="card mb-3" style="margin-left: auto; margin-right: auto; width: 50%;">
+        <div class="card-header">
+            <h3 class="title"><i>Partner</i></h3>
+        </div>
+        <div class="card-body">
+            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="/assets/img/sponsor/adidas.png" alt="First slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="/assets/img/sponsor/nike.png" alt="Second slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="/assets/img/sponsor/puma.png" alt="Third slide">
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div>
+        <div class="card-footer" style="text-align: center;">Grazie per il vostro sostegno !</div>
+    </div>
+
 </div>
